# Spyke

./: .clangd  .gitignore  .gitmodules  3  CMakeLists.txt  Makefile  README.md  \  address_sanitizer_nvidia_commands_to_ignore  ll  setup_tests.cmake
.cache/clangd/index/: base_protocol.cpp.E1362E6E03B830C4.idx  base_protocol.h.C2EF4716579FB0AB.idx  connection.cpp.112924B9C757EE81.idx  connection.cpp.E94AC77AA5B1878B.idx  connection.h.7C2EC2EA98B1024D.idx  connection.h.9E4FF76EE824FDA8.idx  connection_socket_helper.cpp.7D9E7B3E9204A835.idx  connection_socket_helper.cpp.7E510470E2670CCB.idx  connection_socket_helper.cpp.8B3CAFE7E31D9483.idx  connection_socket_helper.h.141C7D07D084262C.idx  connection_socket_helper.h.A8D62A4EC74B2849.idx  connection_socket_helper.h.B8F05FFEF5A5B00B.idx  connection_tests.cpp.49C4B2CA90997B49.idx  connection_tests.cpp.BE98F98715C73390.idx  disconnect_protocol.cpp.9E8068CD3D9FC59A.idx  disconnect_protocol.h.E5E04DF5E8EBB0DF.idx  (+56 more)
assembler/: options.cpp  options.h
build1/: CMakeCache.txt  Makefile  Spyke  cmake_install.cmake
communication/: CMakeLists.txt  export_headers.cmake
communication/include/connection/: connection.h  connection_socket_helper.h
communication/include/helper/: socket_helper.h
communication/include/ip/: ip_v4.h  ip_v6.h
communication/include/packet/: packet.h  packet_headers.h
communication/include/protocols/: base_protocol.h  protocol_ids.h
communication/include/server/: server.h  server_socket_helper.h
communication/include/socket/: connection_socket_helper.h  server_socket_helper.h  socket_context.h  socket_helper.h
communication/src/connection/: connection.cpp  connection_socket_helper.cpp  connection_tests.cpp
communication/src/ip/: ip_v4.cpp  ip_v4_tests.cpp  ip_v6.cpp  ip_v6_tests.cpp
communication/src/packet/: packet.cpp  packet_headers.cpp  packet_tests.cpp
communication/src/server/: server.cpp  server_socket_helper.cpp  server_tests.cpp
communication/src/socket/: connection_socket_helper.cpp  server_socket_helper.cpp  socket_context.cpp  socket_helper.cpp
diagnostics/: CMakeLists.txt  demos.cmake  export_headers.cmake  setup_tests.cmake
diagnostics/demos/: logging_demo.cpp  validation_demo.cpp
diagnostics/include/: log.h  validation.h
diagnostics/include/log/: log.h
diagnostics/include/validation/: validation.h
diagnostics/src/log/: log.cpp  log_tests.cpp
diagnostics/src/validation/: validation_tests.cpp
gpu_management/: gpu_information.cpp  gpu_information.h  gpu_management.cpp  gpu_management.h  opencl_wrapper.cpp  opencl_wrapper.h
module_generation/: generate_module.py
node/: CMakeLists.txt  export_headers.cmake  node.cpp  node.h  node_configuration.cpp  node_configuration.h  setup_tests.cmake
node/include/: node.h
node/src/: node_tests.cpp
p2p/: IP_connection.cpp  IP_connection.h  connection.cpp  connection.h  open_connection.cpp  open_connection.h  open_server_connection.cpp  open_server_connection.h  socket.cpp  socket.h
p2p_communication_protocols/: protocol.h  stable_request_protocol.h
priority_queue/: CMakeLists.txt  export_headers.cmake  setup_tests.cmake  times
priority_queue/demos/: log_demo.cpp  performance_test_pop_single_thread.cpp  performance_test_push_multithread_thread.cpp  performance_test_push_single_thread.cpp
priority_queue/include/: item.h  manager.h  priority_queue.h  priority_queue.hpp  priority_slot.h  push_worker.h  push_worker.hpp  worker.h
priority_queue/src/: item.cpp  priority_queue.cpp  priority_queue_performance_tests.cpp  priority_queue_tests.cpp  priority_slot.cpp  worker.cpp
priority_queue/temp/include/: item.h  priority_queue.h  priority_slot.h
priority_queue/temp/include (cópia 1)/: item.h  priority_queue.h  priority_slot.h
priority_queue/temp/src/: item.cpp  priority_queue.cpp  priority_slot.cpp
priority_queue/temp/src (cópia 1)/: item.cpp  priority_queue.cpp  priority_slot.cpp
priority_queue/temp1/include/: item.h  manager.h  priority_queue.hpp  priority_slot.h  worker.h
priority_queue/temp1/src/: item.cpp  priority_queue_performance_tests.cpp  priority_queue_tests.cpp  priority_slot.cpp  worker.cpp
priority_queue/temp1/temp/: priority_queue.cpp  priority_queue.h  priority_slot.cpp  priority_slot.h
protocols/: CMakeLists.txt  export_headers.cmake
protocols/include/base_protocol/: base_protocol.h  protocol_ids.h
protocols/include/disconnect_protocol/: disconnect_protocol.h
protocols/src/base_protocol/: base_protocol.cpp
protocols/src/disconnect_protocol/: disconnect_protocol.cpp  disconnect_protocol_tests.cpp
src/: main.cpp
test/: CMakeLists.txt  export_headers.cmake
test/demos/: just_a_print.cpp
test/include/: test.h
test/src/: test.cpp  test_module.cppm
test/tests/: main_test.cpp
tests/AVL/: a.out  main.c
tests/BST/: a.out  main.c
tests/assembler/: main.cpp
tests/example1/: main.cpp
tests/example2/: main.cpp
tests/gpu_management/: main.cpp
tests/micky/: test.c  test.ll  test.s
tests/node/: main.cpp  main1.cpp
tests/transaction_management_gpu/: main.cpp
tests/types/: address_tests.cpp  header.h  main.cpp  transaction_tests.cpp
transaction_management_gpu/: transaction_management_defines.h  transaction_management_gpu.cpp  transaction_management_gpu.h  transaction_management_gpu_configuration.cpp  transaction_management_gpu_configuration.h  transaction_management_gpu_data.cpp  transaction_management_gpu_data.h  transaction_management_gpu_user_configuration.cpp  transaction_management_gpu_user_configuration.h
transaction_management_gpu/cl_programs/: BST.cl  acquire_thread.cl  transaction_proccessing.cl  transaction_processing.cl
types/: address.cpp  address.h  block.cpp  block.h  transaction.cpp  transaction.h
utils/: CMakeLists.txt  export_headers.cmake  setup_tests.cmake  tests.cmake  utils.cpp  utils.h
utils/include/: smart_pointers.hpp  stack_array.hpp
utils/include/smart_pointers/: smart_pointers.h  smart_pointers.hpp
utils/src/smart_pointers/: smart_pointers.tpp  smart_pointers_tests.cpp
utils/tests/: smart_pointers_tests.cpp  stack_array_tests.cpp
