
cmake_minimum_required(VERSION 3.15...3.31)

project(
  Spyke 
  VERSION 1.0
  LANGUAGES CXX
)

set( CMAKE_EXPORT_COMPILE_COMMANDS ON )

set( CMAKE_CXX_FLAGS "-std=c++17" )
set( CMAKE_BUILD_TYPE Debug )


set( BUILD_DIR ${CMAKE_SOURCE_DIR}/build )
set( BUILD_BIN_DIR ${BUILD_DIR}/bin )
set( BUILD_OBJ_DIR ${BUILD_DIR}/obj )
set( BUILD_LIB_DIR ${BUILD_DIR}/lib )

set( MAIN_FILE_PATH ${CMAKE_SOURCE_DIR}/src/main.cpp )

set( ROOT_DIRECTORY ${CMAKE_SOURCE_DIR} )

set( SUB_DIRECTORIES_COMMUNICATION_PATH ${CMAKE_SOURCE_DIR}/communication/ )
set( SUB_DIRECTORIES_COMMUNICATION_EXPORT_HEADERS_PATH ${CMAKE_SOURCE_DIR}/communication/export_headers.cmake )

set( SUB_DIRECTORIES_PROTOCOLS_PATH ${CMAKE_SOURCE_DIR}/protocols/ )
set( SUB_DIRECTORIES_PROTOCOLS_EXPORT_HEADERS_PATH ${CMAKE_SOURCE_DIR}/protocols/export_headers.cmake )

set( SUB_DIRECTORIES_PRIORITY_QUEUE_PATH ${CMAKE_SOURCE_DIR}/priority_queue/ )
set( SUB_DIRECTORIES_PRIORITY_QUEUE_EXPORT_HEADERS_PATH ${CMAKE_SOURCE_DIR}/priority_queue/export_headers.cmake )

set( SUB_DIRECTORIES_UTILS_PATH ${CMAKE_SOURCE_DIR}/utils/ )
set( SUB_DIRECTORIES_UTILS_EXPORT_HEADERS_PATH ${CMAKE_SOURCE_DIR}/utils/export_headers.cmake )

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_BIN_DIR} )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BUILD_LIB_DIR} )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BUILD_LIB_DIR} )

include( ${SUB_DIRECTORIES_COMMUNICATION_EXPORT_HEADERS_PATH} )
include( ${SUB_DIRECTORIES_PROTOCOLS_EXPORT_HEADERS_PATH} )
include( ${SUB_DIRECTORIES_PRIORITY_QUEUE_EXPORT_HEADERS_PATH} )
include( ${SUB_DIRECTORIES_UTILS_EXPORT_HEADERS_PATH} )

add_subdirectory(
  ${SUB_DIRECTORIES_COMMUNICATION_PATH}
)

add_subdirectory(
  ${SUB_DIRECTORIES_PROTOCOLS_PATH}
)

add_subdirectory(
  ${SUB_DIRECTORIES_PRIORITY_QUEUE_PATH}
)

add_subdirectory(
  ${SUB_DIRECTORIES_UTILS_PATH}
)

add_executable(
  ${CMAKE_PROJECT_NAME}
  ${MAIN_FILE_PATH}
)


target_link_libraries(
  ${CMAKE_PROJECT_NAME}
  COMMUNICATION_MODULE
  PROTOCOLS_MODULE
  PRIORITY_QUEUE_MODULE
  # UTILS_MODULE
)

include( setup_tests.cmake )
