
set( NODE_MODULE_ROOT_DIR ${CMAKE_SOURCE_DIR}/node )

set(

  NODE_MODULE_COMMON_SOURCES

)

add_library(

  NODE_MODULE STATIC

  ${NODE_MODULE_COMMON_SOURCES}

)

target_link_libraries(

  NODE_MODULE PUBLIC

  EXPORT_NODE_MODULE_COMMON_HEADERS_DIRECTORIES
  EXPORT_NODE_MODULE_COMMON_HEADERS_DIRECTORIES

)
