
set( PRIORITY_QUEUE_MODULE_ROOT_DIR ${CMAKE_SOURCE_DIR}/priority_queue )

set(

  PRIORITY_QUEUE_MODULE_COMMON_SOURCES

  ## PRIOTIY QUEUE ##
  ${PRIORITY_QUEUE_MODULE_ROOT_DIR}/src/item.cpp
  # ${PRIORITY_QUEUE_MODULE_ROOT_DIR}/src/priority_queue.cpp
  ${PRIORITY_QUEUE_MODULE_ROOT_DIR}/src/priority_slot.cpp
  
)

add_library(

  PRIORITY_QUEUE_MODULE STATIC

  ${PRIORITY_QUEUE_MODULE_COMMON_SOURCES}

)

target_link_libraries(

  PRIORITY_QUEUE_MODULE PUBLIC

  EXPORT_PRIORITY_QUEUE_MODULE_COMMON_HEADERS_DIRECTORIES
  EXPORT_UTILS_MODULE_COMMON_HEADERS_DIRECTORIES
  EXPORT_DIAGNOSTICS_MODULE_COMMON_HEADERS_DIRECTORIES

)

if( PRIORITY_QUEUE_MODULE_TESTS )

  include( setup_tests.cmake )

endif()
