
set(
  EXTERNAL_MODULE_HEADERS_LIB

)

get_filename_component(MODULE_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)

set( COMMON_HEADERS_LIB ${MODULE_NAME}_COMMON_HEADERS_LIB )
set( SOURCE_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR}/src )

set( 

  ${MODULE_NAME}_COMMON_SOURCES 

  ${SOURCE_ROOT_DIR}/item.cpp

)

if( ${MODULE_NAME}_COMMON_SOURCES )

  set( LIB_TYPE PUBLIC )

  add_library(
    ${MODULE_NAME}_MODULE STATIC
    ${${MODULE_NAME}_COMMON_SOURCES}
  )

else()

  set( LIB_TYPE INTERFACE )

  add_library(

    ${MODULE_NAME}_MODULE ${LIB_TYPE}

  )

endif()

target_link_libraries(

  ${MODULE_NAME}_MODULE ${LIB_TYPE}

  ${COMMON_HEADERS_LIB}

)

foreach(EXTERNAL_MODULE_NAME ${EXTERNAL_MODULE_HEADERS_LIB})
    target_link_libraries(
      ${MODULE_NAME}_MODULE ${LIB_TYPE}
      ${EXTERNAL_MODULE_NAME}_MODULE
    )
endforeach()
