
set( PROTOCOLS_MODULE_ROOT_DIR ${CMAKE_SOURCE_DIR}/protocols )

set(

  PROTOCOLS_MODULE_COMMON_SOURCES

  ## DISCONNECT PROTOCOL ##
  ${PROTOCOLS_MODULE_ROOT_DIR}/src/disconnect_protocol/disconnect_protocol.cpp

  ## BASE PROTOCOL ##
  ${PROTOCOLS_MODULE_ROOT_DIR}/src/base_protocol/base_protocol.cpp
  
)

add_library(

  PROTOCOLS_MODULE STATIC

  ${PROTOCOLS_MODULE_COMMON_SOURCES}

)

target_link_libraries(

  PROTOCOLS_MODULE PUBLIC

  EXPORT_COMMUNICATION_MODULE_COMMON_HEADERS_DIRECTORIES
  EXPORT_PROTOCOLS_MODULE_COMMON_HEADERS_DIRECTORIES

)
