
set( UTILS_MODULE_ROOT_DIR ${CMAKE_SOURCE_DIR}/utils )

# set(
#
#   UTILS_MODULE_COMMON_SOURCES
#
#   ## SMART POINTERS ##
#   # ${UTILS_MODULE_ROOT_DIR}/src/smart_pointers/smart_pointers.cpp
#
# )
#
# add_library(
#
#   UTILS_MODULE STATIC
#
#   ${UTILS_MODULE_COMMON_SOURCES}
#
# )
#
# target_link_libraries(
#
#   UTILS_MODULE PUBLIC
#
#   EXPORT_UTILS_MODULE_COMMON_HEADERS_DIRECTORIES
#
# )
